--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <version>1.9.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
 
     </dependencies>
 </project>
